--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.MapFragment">
 
-<!--   <fragment-->
-<!--       class="com.google.android.gms.maps.SupportMapFragment"-->
-<!--       android:id="@+id/map_fragment"-->
-<!--       android:layout_width="match_parent"-->
-<!--       android:layout_height="match_parent" />-->
+   <fragment
+       class="com.google.android.gms.maps.SupportMapFragment"
+       android:id="@+id/map_fragment"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent" />
 </FrameLayout>
