--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,7 +27,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="johndoe@example.com"/>
+            android:text="johndoe@example.com"
+            android:id="@+id/email"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
